--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "chrysalink-lepidoptera-host-plant-explorer",
+  "private": true,
+  "version": "0.1.0",
+  "scripts": {
+    "dev": "cd frontend && npm run dev",
+    "build": "cd frontend && npm run build",
+    "typecheck": "cd frontend && npx tsc --noEmit"
+  },
   "devDependencies": {
     "typescript": "^5.9.3"
   }
