Fixed comment notifications

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@supabase/supabase-js": "^2.86.0"
   }
 }
