--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,48 @@
-# Node modules
-node_modules/
 
-# Vite optimization
-node_modules/.vite/
+
+# Node
+node_modules/
+**/node_modules/
+
+# Dependency directories
+frontend/node_modules/
+backend/**/node_modules/
+
+# Build outputs
+dist/
+build/
+out/
+
+# Python: virtualenvs and caches
+.venv/
+venv/
+backend/vision_service/.venv/
+__pycache__/
+*.pyc
+
+# Environment
+.env
+.env.local
+
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# OS files
+.DS_Store
+Thumbs.db
 
 # Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.log
 
-# local env
-.env
+# Large model weights (keep patterns for local model files)
+*.pth
+*.pt
+*.safetensors
+backend/vision_service/naturalia/*.pth
+backend/vision_service/naturalia/*.safetensors
 
-# backup files
-src_backup_from_main_*/
+# Git LFS pointer file (if later used)
+.gitattributes
