--- a/backend/vision_service/requirements.txt
+++ b/backend/vision_service/requirements.txt
@@ -6,6 +6,7 @@ requests
 huggingface-hub
 timm
 numpy
+transformers>=4.30.0
 
 # NOTE: torch is intentionally NOT included here due to large wheel sizes.
 # Install torch separately for your platform using the official instructions.
