--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
-    "@supabase/supabase-js": "^2.86.0"
+    "@supabase/storage-js": "^2.86.2",
+    "@supabase/supabase-js": "^2.86.2"
   }
 }
